bad/bin_op_or_array_array.example_compiler_output
ERROR
[1mbad/bin_op_or_array_array.lat:3:13: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `int[]` and `int[]`[m
	new int[3] || new int[3];
	           [1;32m^[m
